# linktransformer

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
archive/: train_wiki_aliases.py
benchmarking/: benchmark_wiki_aliases.py  calc_acc_1_lt.py  example_model_upload.py  hard_negative_mining_lt.py  prep_deepmatcher_data.py  push_local_to_hub.py  replicate_results_lt.py  train_all_models_config.py  train_eval_industry_benchmarks.py  train_historic_japanese.py  train_historic_mexican.py  train_multi_lingual_companies.py  train_multilingual_un_models.py  train_un_models.py  train_wiki_aliases_clusters.py  train_wikidata_jap_comp_prod.py
docs/: conf.py  modules.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/_sources/: index.rst.txt  modules.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: modules.rst
src/linktransformer/: __init__.py  cluster_fns.py  infer.py  model_card_templates.py  preprocess.py  train_clf_model.py  train_im_model.py  train_model.py  train_multi_modal_clf.py  utils.py
src/linktransformer/configs/: __init__.py  classification.json  linkage.json
src/linktransformer/data/: __init__.py  coarse.csv  company_clusters.csv  es_mexican_products.xlsx  eval_weather.csv  fine.csv  jp_pr_tk431.csv  protest_test.csv  protest_train.csv  protest_val.csv  protests_toy_sample_binary.csv  protests_toy_sample_ternary.csv  test_weather.csv  toy_comp_1.csv  toy_comp_2.csv  toy_multi_1.csv  toy_multi_2.csv  toy_pairs.csv  train_weather.csv  translation_1.csv  translation_2.csv
src/linktransformer/modelling/: CLFLinkTransformer.py  GenLinkTransformer.py  ImageLinkTransformer.py  LinkTransformer.py  LinkTransformerClassifier.py
src/linktransformer/modified_sbert/: LinkTransformer.py  cluster_fns.py  data_loaders.py  evaluation.py  losses.py  train.py
tests/: api_provider_routing_test.py  class_train_test.py  infer_test.py  merge_knn_llm_test.py  train_test.py
un_data/: train_un_models.py
web_apps/: merge_lt_app.py
