[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "linktransformer"
version = "0.1.16"

dependencies = [
        "scikit-learn==1.3.2",
        "faiss-cpu==1.8.0",
        "hdbscan==0.8.36",
        "networkx==3.1",
        "torch==2.5.1",
        "sentence-transformers==2.3.1",
        "transformers==4.48.1",
        "wandb==0.17.0",
        "numpy==1.24.4",
        "pandas==2.2.3",
        "openai==1.30.4",
        "openpyxl==3.1.2",
        "datasets==3.2.0",
        "accelerate==1.3.0",
        "evaluate==0.4.3"
]
authors = [
  { name="Abhishek Arora and Melissa Dell", email="linktransformer23@gmail.com" },
]
description = "A friendly way to do link, aggregate, cluster and de-duplicate dataframes using large language models."
readme = "README.md"
requires-python = ">=3.8, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://linktransformer.github.io/"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
