[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "linktransformer"
version = "0.1.18"

dependencies = [
  "numpy==2.4.2",
  "pandas==3.0.0",
  "scipy==1.17.0",
  "scikit-learn==1.8.0",
  "torch==2.10.0",
  "sentence-transformers==5.2.2",
  "transformers==5.1.0",
  "huggingface-hub==1.4.1",
  "faiss-cpu==1.13.2",
  "hdbscan==0.8.41",
  "networkx==3.6.1",
  "wandb==0.25.0",
  "httpx==0.28.1",
  "openai==2.20.0",
  "openpyxl==3.1.5",
  "datasets==4.5.0",
  "accelerate==1.12.0",
  "evaluate==0.4.6",
  "google-generativeai==0.8.6",
  "tiktoken==0.12.0",
  "sentencepiece==0.2.1"
]
authors = [
  { name="Abhishek Arora and Melissa Dell", email="linktransformer23@gmail.com" },
]
description = "A friendly way to do link, aggregate, cluster and de-duplicate dataframes using large language models."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://linktransformer.github.io/"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
